fix(modalconfirm): change z-index and add hover for buttons

--- a/src/components/ModalConfirm/ModalConfirm.scss
+++ b/src/components/ModalConfirm/ModalConfirm.scss
@@ -12,7 +12,7 @@
 	justify-content: center;
 	align-items: center;
 	gap: 8px;
-	z-index: 3;
+	z-index: 999;
 	opacity: 0;
 	visibility: hidden;
 	cursor: pointer;
@@ -75,11 +75,13 @@
 		font-weight: 400;
 		line-height: 1.3;
 		font-family: $--Font-Primary;
+		transition: opacity 100ms ease-in;
 	}
 
 	&__button:hover,
 	&__exit:hover {
 		cursor: pointer;
+		opacity: 0.8;
 	}
 
 	&__button_type_ok {
